Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13217

[C++][Gandiva] Correct convert_replace function for invalid chars on string beginning

    XMLWordPrintableJSON

Details

    Description

      The CONVERT_REPLACE Gandiva function is not working properly for invalid chars on the beginning of the string (e.g. "\xa0\xa1-valid" should be  "-valid" considering an empty replacement char. But it is not replacing correctly).

      Attachments

        Issue Links

          Activity

            People

              jpedroantunes João Pedro Antunes Ferreira
              jpedroantunes João Pedro Antunes Ferreira
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h