ARROW-13217: [C++][Gandiva] Correct error on convert replace function for initial invalid bytes

The CONVERT_REPLACE Gandiva function is not working properly for invalid chars on the beginning of the string (e.g. "\xa0\xa1-valid" should be  "-valid" considering an empty replacement char. But it is not replacing correctly).

Closes #10625 from jpedroantunes/bugfix/convert-replace-initial-invalid-chars and squashes the following commits:

940fbf095 <João Pedro> Correct error on convert replace function for initial invalid bytes

Authored-by: João Pedro <joaop@simbioseventures.com>
Signed-off-by: Praveen <praveen@dremio.com>