cpp/src/gandiva/precompiled/string_ops.cc
@@ -1397,7 +1397,7 @@ const char* convert_replace_invalid_fromUTF8_binary(int64_t context, const char*
     valid_bytes_to_cpy += char_len;
   }
   // if invalid chars were not found, return the original string
-  if (out_byte_counter == 0) return text_in;
+  if (out_byte_counter == 0 && in_byte_counter == 0) return text_in;
   // if there are still valid bytes to copy, do it
   if (valid_bytes_to_cpy != 0) {
     memcpy(ret + out_byte_counter, text_in + in_byte_counter, valid_bytes_to_cpy);
